# flow-atelier

./: .env.example  .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
app/: __init__.py  _click_for_docs.py  main.py
app/core/: atelier.py  settings.py
app/modules/: conditions.py  engine.py  templating.py
app/schemas/: conduit.py  flow.py  log.py  progress.py  schedule.py
app/services/executor/: base.py  bash.py  conduit.py  harness.py  hitl.py  prompt_sink.py
app/services/scheduler/: __init__.py  runner.py  store.py  triggers.py
app/services/store/: base.py  filesystem.py
docs/: index.md
docs/concepts/: architecture.md  folder-layout.md  scopes.md
docs/examples/: ai-code-review.md  deploy-pipeline.md  hello-world.md  index.md  interactive-harness.md  nested-conduits.md  parallel-batch.md
docs/getting-started/: installation.md  quickstart.md
docs/reference/: cli.md  conditions.md  conduit.md  harnesses.md  hitl.md  templating.md
docs/services/: schedule.md  serve.md
tests/: conftest.py  test_init.py  test_integration.py  test_live_harness.py  test_main.py
tests/core/: test_settings.py
tests/fixtures/: fake_acp_agent.py
tests/modules/: test_conditions.py  test_engine.py  test_templating.py
tests/schemas/: test_schedule_schema.py  test_schemas.py
tests/services/executor/: test_bash.py  test_conduit.py  test_harness.py  test_hitl.py  test_prompt_sink.py
tests/services/scheduler/: test_runner.py  test_store.py  test_triggers.py
tests/services/store/: test_filesystem.py
